# .github

./: .gitignore  rust-toolchain.toml  sync-dependency-review.sh
.github/workflows/: assert-branch-invariants.yml  auto-tag.yml  cleanup-dev-releases.yml  codeql.yml  codex-security-fix.yml  codex-semver-fix.yml  crates-publish.yml  dependabot-automerge.yml  dependency-review.yml  dev-prepare.yml  dev-publish.yml  dev-release-binaries.yml  forward-port.yml  host-crate-ci.yml  nightly-audit.yml  nightly-coverage.yml  nightly-develop.yml  nightly-orchestrate-stable.yml  nightly-perf.yml  nightly-semver-advisory.yml  notify-failure.yml  notify-success.yml  onboard-repo.yml  perf-smoke.yml  pr-ci.yml  release-binaries-rc.yml  release-binaries.yml  (+7 more)
audits/: binary-dual-role.md
profile/: README.md
runbooks/: dev-stable-v2.md  minor-version-bump.md  rollback-bad-publish.md
scripts/: assert-branch-invariants.py  audit-binary-crates.sh  bump-dev-version.sh  bump_cargo_versions.py  cleanup-dev-releases.sh  forward-port.sh  mint-app-token.sh  nightly-cargo-lock-sync.sh  nightly-develop-orchestrate.sh  nightly-orchestrate-stable.sh  onboard-repo.sh  rewrite-binary-name.py  stable-rc-build.sh  start-next-minor.sh  sync-branch-invariants.sh  sync-dev-publish.sh  test_assert_branch_invariants.py  test_bump_cargo_versions.py  test_rewrite_binary_name.py  train-stall-monitor.sh  weekly-stable-prepare.sh
selftest/: Cargo.toml  README.md
selftest/benches/: perf.rs
selftest/src/: lib.rs
selftest/tests/: perf_scaling.rs  perf_timeout.rs
toolchain/: REPO_MANIFEST.toml
(+2 files in other folders)
