[package]
name = "greentic-reusable-selftest"
version = "0.0.0"
edition = "2024"
publish = false
description = "Fixture crate for greenticai/.github's reusable-workflow self-test. Not for external use."
license = "MIT"

[lib]
path = "src/lib.rs"

[[bench]]
name = "perf"
harness = false

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
